[metadata]
name = ELFMachine
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/ELFMachine.py
description = Just a enum used in e_machine field of ELF header
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = ELF, header, binary, enum, e_machine, x86, AI32, i686, amd64, ARM, RISCV
license = BSD-2-Clause + BSD-3-Clause + Apache-2
license_file = LICENSE.txt
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: BSD
	License :: OSI Approved :: BSD
	License :: Apache
	License :: OSI Approved :: Apache
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
zip_safe = True
setup_requires = setuptools_scm; requests;

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel", "requests"]
